fixed parsing of date params, fixed ui bugs

--- a/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.html
+++ b/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.html
@@ -5,7 +5,9 @@
 </mat-toolbar>
 
 <mat-sidenav-container [hasBackdrop]="false">
-  <mat-drawer #drawer mode="over" position="end" [(opened)]="showSidePanel && this.shouldTypedInstancePanelBeVisible">
+  <mat-drawer #drawer  mode="over" position="end"
+              class="full-height-sidebar"
+              [(opened)]="showSidePanel && this.shouldTypedInstancePanelBeVisible">
     <div class="drawer-content">
       <app-typed-instance-panel-container
         [instance]="selectedTypeInstance"
