--- a/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.scss
@@ -7,6 +7,10 @@
   height: 100%;
 }
 
+.full-height-sidebar {
+  // Make the rhs content sidebar full-height
+  height: 100% !important;
+}
 mat-sidenav-container {
   flex-grow: 1;
 }
