--- a/vyne-query-service/src/main/web/src/fonts.scss
+++ b/vyne-query-service/src/main/web/src/fonts.scss
@@ -1,67 +1,86 @@
 /* latin */
+//@font-face {
+//  font-family: 'Source Sans Pro';
+//  font-style: normal;
+//  font-weight: 400;
+//  font-display: swap;
+//  src: /*local('Source Sans Pro Regular'), local('SourceSansPro-Regular'), */ url("/assets/fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf") format('truetype');
+//  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+//}
+
 @font-face {
-  font-family: 'Hind';
-  font-style: normal;
+  font-family: 'jetbrains-mono';
   font-weight: 400;
   font-display: swap;
-  src: local('Hind Regular'), local('Hind-Regular'), url("/assets/fonts/Hind/Hind-Regular.ttf") format('truetype');
+  src: url("/assets/fonts/jetbrains-mono/JetBrainsMono-Regular.ttf") format('truetype');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-/* latin */
 @font-face {
-  font-family: 'Hind';
-  font-style: normal;
-  font-weight: 600;
+  font-family: 'jetbrains-mono';
+  font-weight: 300;
   font-display: swap;
-  src: local('Hind SemiBold'), local('Hind-SemiBold'), url("/assets/fonts/Hind/Hind-SemiBold.ttf") format('truetype');
+  src: url("/assets/fonts/jetbrains-mono/JetBrainsMono-Light.ttf") format('truetype');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-
-/* latin */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'jetbrains-mono';
+  font-weight: 200;
+  font-display: swap;
+  src: url("/assets/fonts/jetbrains-mono/JetBrainsMono-ExtraLight.ttf") format('truetype');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+@font-face {
+  font-family: 'source-code-pro';
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: local('Open Sans Light'), local('OpenSans-Light'), url("/assets/fonts/Open_Sans/OpenSans-Light.ttf") format('truetype');
+  src: url("/assets/fonts/source-code-pro/SourceCodePro-Light.ttf") format('truetype');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-/* latin */
+
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'source-code-pro';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Open Sans Regular'), local('OpenSans-Regular'), url("/assets/fonts/Open_Sans/OpenSans-Regular.ttf") format('truetype');
+  src: url("/assets/fonts/source-code-pro/SourceCodePro-Regular.ttf") format('truetype');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-/* latin */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'source-code-pro';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url("/assets/fonts/source-code-pro/SourceCodePro-Light.ttf") format('truetype');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+@font-face {
+  font-family: 'nunito-sans';
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'), url("/assets/fonts/Open_Sans/OpenSans-SemiBold.ttf") format('truetype');
+  src: url("/assets/fonts/nunito-sans/NunitoSans-SemiBold.ttf") format('truetype');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-/* latin */
+
 @font-face {
-  font-family: 'Source Sans Pro';
+  font-family: 'nunito-sans';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Source Sans Pro Regular'), local('SourceSansPro-Regular'), url("/assets/fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf") format('truetype');
+  src: url("/assets/fonts/nunito-sans/NunitoSans-Regular.ttf") format('truetype');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-/* latin */
+
 @font-face {
-  font-family: 'Nunito';
+  font-family: 'nunito-sans';
   font-style: normal;
-  font-weight: 400;
+  font-weight: 300;
   font-display: swap;
-  src: url("/assets/fonts/Nunito/Nunito-Regular.ttf") format('truetype');
+  src: url("/assets/fonts/nunito-sans/NunitoSans-Light.ttf") format('truetype');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
 
 @font-face {
   font-family: 'Material Icons';
