--- a/vyne-query-service/src/main/web/src/theme-colors.scss
+++ b/vyne-query-service/src/main/web/src/theme-colors.scss
@@ -53,6 +53,8 @@ $bg-info: rgba($blueish, 0.3);
 $bg-warn: #f5ab26;
 $bg-error: $red-light;
 
+$warning-2: #DD8902;
+
 $vyne-purple: #5160ff;
 $vyne-lilac: #7d73b1;
 $vyne-blue: #2F6BFF;
