--- a/vyne-query-service/src/main/web/src/app/query-panel/taxi-viewer/call-explorer/call-explorer.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/taxi-viewer/call-explorer/call-explorer.component.html
@@ -21,5 +21,5 @@
     <app-service-graph [result]="queryResult" *ngIf="selectedChart == 'graph'"></app-service-graph>
     <app-sequence-diagram [result]="queryResult" *ngIf="selectedChart == 'sequence'"></app-sequence-diagram>
   </div>
-  <app-operation-view [operation]="selectedOperation" *ngIf="selectedOperation" (close)="selectedOperation = null"></app-operation-view>
+  <app-call-explorer-operation-view [operation]="selectedOperation" *ngIf="selectedOperation" (close)="selectedOperation = null"></app-call-explorer-operation-view>
 </div>
