--- a/vyne-query-service/src/main/web/src/typography.scss
+++ b/vyne-query-service/src/main/web/src/typography.scss
@@ -12,6 +12,35 @@ $font-sans-alt: $body-font, /*Hind,*/ system-ui,BlinkMacSystemFont,-apple-system
   font-family: $mono;
 }
 
+
+@mixin links() {
+  a {
+    position: relative;
+    display: inline-block;
+    outline: none;
+    color: #404d5b;
+    vertical-align: bottom;
+    text-decoration: none;
+    white-space: nowrap;
+
+    // This is to force the border-bottom to render closer to the text
+    line-height: 0.4rem;
+    padding: 0.6rem 0.1rem 0.3rem;
+  }
+
+  a {
+    border-bottom: 1px solid rgba($vyne-lilac,0.4);
+    font-weight: 500;
+    -webkit-transition: background-color 0.3s, border-color 0.3s;
+    transition: background-color 0.3s, border-color 0.3s;
+  }
+
+  a:focus, a:hover {
+    border-color: rgba(52,73,94,0);
+    background-color: rgba($grey-3,0.1);
+  }
+}
+
 .mono-badge {
   font-family: $mono;
   // Adding important here, as font sizes are getting
@@ -25,6 +54,8 @@ $font-sans-alt: $body-font, /*Hind,*/ system-ui,BlinkMacSystemFont,-apple-system
   padding: 0.2rem 0.4rem;
   display: inline-block;
   margin-top: 0.25rem;
+
+  @include links();
 }
 
 .font-sans-alt {
