--- a/vyne-query-service/src/main/web/src/app/vyne/vyne.component.scss
+++ b/vyne-query-service/src/main/web/src/app/vyne/vyne.component.scss
@@ -60,6 +60,13 @@
     }
   }
 }
+.userInfo {
+  position: absolute;
+  bottom: 20px;
+  font-size: 0.8rem;
+  color: rgba(255,255,255,0.6);
+  padding: 15px;
+}
 
 .appInfo {
   position: absolute;
