--- a/vyne-query-service/src/main/web/src/app/vyne/vyne.component.html
+++ b/vyne-query-service/src/main/web/src/app/vyne/vyne.component.html
@@ -23,7 +23,7 @@
         </a>
         <!--        <a [routerLink]="element.route" routerLinkActive="active">{{element.title}}</a>-->
       </div>
-      <div *ngIf="userInfo !== null && userInfo.userName !== null" class="navbar-route">
+      <div *ngIf="userInfo !== null && userInfo.username !== null" class="navbar-route">
         <a routerLink="logout" routerLinkActive="active" #rla="routerLinkActive">
           <img src="assets/img/logout.svg">
           <span>Logout</span>
