--- a/vyne-query-service/src/main/web/src/app/cask-viewer/cask-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/cask-viewer/cask-viewer.component.html
@@ -1,8 +1,5 @@
-<mat-toolbar color="primary">
-  <span>Cask Viewer</span>
-  <span class="toolbar-spacer"></span>
-  <app-search-bar-container></app-search-bar-container>
-</mat-toolbar>
+<app-header-bar title="Cask viewer">
+</app-header-bar>
 
 <div class="container">
 
