--- a/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.html
+++ b/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.html
@@ -1,9 +1,5 @@
-<mat-toolbar color="primary">
-  <span>Data Explorer</span>
-  <span class="toolbar-spacer"></span>
-  <app-search-bar-container></app-search-bar-container>
-</mat-toolbar>
-
+<app-header-bar title="Data Explorer">
+</app-header-bar>
 <mat-sidenav-container [hasBackdrop]="false">
   <mat-drawer #drawer  mode="over" position="end"
               class="full-height-sidebar"
