--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -1,8 +1,5 @@
-<mat-toolbar color="primary">
-  <span>Type Explorer</span>
-  <span class="toolbar-spacer"></span>
-  <app-search-bar-container></app-search-bar-container>
-</mat-toolbar>
+<app-header-bar title="Type Explorer">
+</app-header-bar>
 <div class="page-content" appTocHost tocTag="h2" (contentsChanged)="contents = $event">
   <div class="documentation" *ngIf="type">
     <div class="type-name">
