refactoring around git persistence, added HTTP service for pushing changes up to git repo
LENS-450

--- a/vyne-query-service/src/main/web/src/app/type-list/type-list.component.scss
+++ b/vyne-query-service/src/main/web/src/app/type-list/type-list.component.scss
@@ -149,6 +149,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  margin-top: 0.75rem;
   max-width: 700px; // An arbitary number because spanning forever looked poo. A better strategy is clearly needed
 
   .summary {
