--- a/vyne-query-service/src/main/web/src/app/object-view/object-view-container.component.scss
+++ b/vyne-query-service/src/main/web/src/app/object-view/object-view-container.component.scss
@@ -4,15 +4,18 @@
 img.icon {
   width: 24px;
 }
+
 :host {
   height: 100%;
 }
+
 .container {
   height: 100%;
   //min-height: 250px;
   display: flex;
   flex-direction: column;
 }
+
 // Override the width & height of the toggle button from 48x48 to
 // 36x36 - just to keep inline with the buttons and minimize too much whitespace
 ::ng-deep .mat-button-toggle-appearance-standard .mat-button-toggle-label-content {
@@ -29,14 +32,40 @@ app-results-table {
   height: 100%;
 }
 
+.results-table-container {
+  height: 100%;
+}
+
+.drilled-fields-list {
+  font-size: 0.8rem;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid rgba($vyne-lilac, 0.2);
+  padding: 0.5rem;
+
+  .label {
+    margin-right: 1rem;
+  }
+  .drilled-field {
+    border-bottom: 1px dashed rgba($vyne-lilac, 0.4);
+    cursor: pointer;
+
+    &:hover {
+      border-bottom: 1px solid rgba($vyne-lilac, 0.6);
+    }
+  }
+
+}
+
 .toolbar {
   margin-bottom: 1rem;
   display: flex;
   align-items: center;
+
   .type-name {
     font-size: 1rem;
     margin-right: 2rem;
   }
+
   .spacer {
     flex-grow: 1;
   }
