added timeline, expanded lineage

--- a/vyne-query-service/src/main/web/src/app/lineage-display/lineage-display.component.html
+++ b/vyne-query-service/src/main/web/src/app/lineage-display/lineage-display.component.html
@@ -5,7 +5,7 @@
              [panningEnabled]="true"
              [autoCenter]="true"
              [draggingEnabled]="true"
-             [orientation]="orientation"
+             orientation="TD"
              [update$]="graphNodesChanged"
              [curve]="curve" (select)="nodeSelected($event)">
 
