basic streaming of results now working.  outstanding regression issues

--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/bottom-bar.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/bottom-bar.component.scss
@@ -21,6 +21,16 @@
   font-size: 0.9rem;
 }
 
+.progress {
+  margin-left: 2rem;
+  margin-right: 3rem;
+  display: flex;
+  align-items: center;
+  mat-progress-bar {
+    width: 250px;
+    margin-right: 1rem;
+  }
+}
 .running-timer {
   color: #e3b963;
   font-size: 0.9rem;
