--- a/vyne-query-service/src/main/web/src/app/query-panel/query-wizard/query-wizard.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-wizard/query-wizard.component.html
@@ -37,8 +37,8 @@
         </div>
 
         <div class="button-bar">
-          <button mat-raised-button color="primary" (click)="addNewFact()">Add new fact</button>
-          <button mat-raised-button color="primary" (click)="addNewFileFact()">Add fact from a file</button>
+          <button mat-stroked-button (click)="addNewFact()">Add new fact</button>
+          <button mat-stroked-button (click)="addNewFileFact()">Add fact from a file</button>
         </div>
       </mat-card-content>
     </mat-card>
@@ -65,7 +65,7 @@
           </mat-form-field>
         </form>
         <div>
-          <button mat-raised-button color="primary" (click)="submitQuery()">Submit query</button>
+          <button mat-flat-button color="primary" (click)="submitQuery()">Submit query</button>
         </div>
       </mat-card-content>
     </mat-card>
