--- a/vyne-query-service/src/main/web/src/app/query-history/query-history-card.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-history/query-history-card.component.scss
@@ -12,6 +12,7 @@
   code {
     flex-grow: 1;
   }
+
   &:hover {
     background-color: rgba($dark-grey-2, 0.1);
   }
@@ -29,6 +30,10 @@
   margin-bottom: 0.3rem
 }
 
+.progress-container {
+  margin: 1rem 0;
+}
+
 .record-stat {
   color: $dark-grey-1;
   display: flex;
@@ -44,22 +49,26 @@
   }
 }
 
+.spacer {
+  flex-grow: 1;
+}
 
 .timestamp-row {
   width: 100%;
   display: flex;
+  align-items: center;
   font-size: 0.8rem;
   color: $dark-grey-1;
+
   span {
     flex-grow: 1;
   }
 
-  img {
-    width: 15px;
+  mat-icon {
     opacity: 0.6;
+
     &:hover {
       opacity: 1;
     }
-
   }
 }
