update logo, rename type-list to data catalog, fix some colourings. addresses LENS-449 , LENS-448 , LENS-476

--- a/vyne-query-service/src/main/web/src/app/query-panel/query-wizard/query-wizard.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-wizard/query-wizard.component.scss
@@ -61,6 +61,9 @@ app-vyne-query-viewer {
 }
 
 .target-type-container {
+  // the box shadow is being cut off.
+  // Can tweak this if the overflow becomes a problem
+  overflow: visible;
   .mat-form-field {
     width: 100%;
   }
