--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -1,4 +1,4 @@
-<app-header-bar title="Type Explorer">
+<app-header-bar title="Data Catalogue">
 </app-header-bar>
 <div class="page-content" appTocHost tocTag="h2" (contentsChanged)="contents = $event">
   <div class="documentation" *ngIf="type">
