--- a/vyne-query-service/src/main/web/src/app/type-list/type-list.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-list/type-list.component.html
@@ -1,8 +1,10 @@
-<app-header-bar title="Type Explorer">
+<app-header-bar title="Data Catalogue">
 </app-header-bar>
 <app-filter-types (filterChanged)="updateFilter($event)"></app-filter-types>
-<div class="page-content">
-  <div *ngFor="let member of filteredMembers" class="search-result" (click)="navigateToMember(member)">
+<div class="cdk-viewport-container container">
+  <cdk-virtual-scroll-viewport class="cdk-viewport-list" itemSize="64">
+    <ng-container *cdkVirtualFor="let member of filteredMembers">
+      <div class="search-result" (click)="navigateToMember(member)">
     <div class="schema-member-container">
       <div class="name-row">
         <div class="member-qualified-name">
@@ -22,4 +24,7 @@
       </div>
     </div>
   </div>
+    </ng-container>
+  </cdk-virtual-scroll-viewport>
+
 </div>
