--- a/vyne-query-service/src/main/web/src/styles.scss
+++ b/vyne-query-service/src/main/web/src/styles.scss
@@ -43,8 +43,8 @@ $custom-typography: mat-typography-config(
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$vyne-app-primary: mat-palette($vyne-grey-blue-palette, 700, 800, 600);
-$vyne-app-accent: mat-palette($vyne-grey-blue-palette, A400, A200, A700);
+$vyne-app-primary: mat-palette($vyne-grey-blue-palette,  A400, A100, A700);
+$vyne-app-accent: mat-palette($vyne-grey-blue-palette, A400, A100, A700);
 
 // The warn palette is optional (defaults to red).
 $vyne-app-warn: mat-palette($mat-red);
@@ -62,4 +62,9 @@ $vyne-app-theme: mat-light-theme($vyne-app-primary, $vyne-app-accent, $vyne-app-
 // If removing this, be sure to test the ag-grid height in the tabbed-results-view component
 .mat-tab-body-wrapper{
   flex-grow: 1;
+}
+
+.mat-card-header-text {
+  // There's an annoying indent in the card headers that offsets things by 16px :(
+  margin: 0 !important;
 }
