--- a/vyne-query-service/src/main/web/src/app/code-editor/code-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/code-editor/code-editor.component.html
@@ -1,2 +1,3 @@
-<ngx-monaco-editor [options]="editorOptions" class="code-editor" [(ngModel)]="content" #editor>
+<ngx-monaco-editor class="code-editor"
+                   [ngModel]="content" (ngModelChange)="updateContent($event)" #editor>
 </ngx-monaco-editor>
