--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
@@ -2,8 +2,12 @@
   <as-split-area [size]="220">
     <div class="code-editor-section">
       <div class="code-viewer-container">
-        <ngx-monaco-editor [options]="editorOptions" class="code-editor" [(ngModel)]="query" #editor>
-        </ngx-monaco-editor>
+        <app-code-editor
+            class="code-editor"
+            (contentChanged)="onContentChanged($event)"
+            [content]="query" #editor></app-code-editor>
+<!--        <ngx-monaco-editor [options]="editorOptions" class="code-editor" [(ngModel)]="query" #editor>-->
+<!--        </ngx-monaco-editor>-->
       </div>
 
       <app-query-editor-bottom-bar
