refactored query result serialization, made query wizard working again, tree view in result viewer is working

--- a/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
@@ -17,10 +17,10 @@
   <div class="container">
     <app-query-list [historyRecords]="history" (recordSelected)="setActiveRecord($event)"></app-query-list>
     <div class="results-section" *ngIf="activeRecord">
-      <app-tabbed-results-view
-        [result]="activeRecord?.response"
-        (downloadClicked)="downloadQueryHistory($event)"
-        (instanceSelected)="onInstanceSelected($event)"></app-tabbed-results-view>
+<!--      <app-tabbed-results-view-->
+<!--        [result]="activeRecord?.response"-->
+<!--        (downloadClicked)="downloadQueryHistory($event)"-->
+<!--        (instanceSelected)="onInstanceSelected($event)"></app-tabbed-results-view>-->
     </div>
 
   </div>
