--- a/vyne-query-service/src/main/web/src/app/query-panel/query-wizard/query-wizard.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-wizard/query-wizard.component.html
@@ -28,17 +28,9 @@
             placeholder="Select the type of fact"></app-type-autocomplete>
         </div>
 
-        <div class="file-fact-list">
-          <app-file-fact-selector [schema]="schema"
-                                  *ngFor="let fileFactForm of fileFacts"
-                                  (parsedInstanceChanged)="handleFileFactChanged(fileFactForm, $event)"
-                                  (typeSelected)="handleFileFactTypeSelected(fileFactForm, $event)"
-          ></app-file-fact-selector>
-        </div>
 
         <div class="button-bar">
           <button mat-stroked-button (click)="addNewFact()">Add new fact</button>
-          <button mat-stroked-button (click)="addNewFileFact()">Add fact from a file</button>
         </div>
       </mat-card-content>
     </mat-card>
@@ -71,6 +63,15 @@
     </mat-card>
   </div>
 </div>
+<!--<div class="results-container">-->
+<!--  <mat-spinner *ngIf="loading" [diameter]=40></mat-spinner>-->
+
+<!--  <app-tabbed-results-view-->
+<!--    [instances$]="results$"-->
+<!--    (instanceSelected)="instanceSelected.emit($event)"-->
+<!--    (downloadClicked)="downloadQueryHistory($event.format)"-->
+<!--  ></app-tabbed-results-view>-->
+<!--</div>-->
 <!-- Disabling the query code viewer for now, since the code it generates
 is incorrect, and we should re-evaluate in the context of VyneQL -->
 <!--<div class="row">-->
