Cask Force Delete (LENS-497)

--- a/vyne-query-service/src/main/web/src/app/cask-viewer/cask-confirm-dialog.component.html
+++ b/vyne-query-service/src/main/web/src/app/cask-viewer/cask-confirm-dialog.component.html
@@ -1,6 +1,13 @@
 <h2 mat-dialog-title>{{data.title}}</h2>
 <mat-dialog-content class="mat-typography">
  {{data.message}}
+  <mat-list>
+    <mat-list-item *ngFor="let message of (data.messages || [])">
+      <mat-icon mat-list-icon>panorama_fish_eye</mat-icon>
+      {{message}}
+    </mat-list-item>
+  </mat-list>
+
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
