--- a/vyne-query-service/src/main/web/src/app/cask-viewer/cask-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/cask-viewer/cask-viewer.component.html
@@ -17,7 +17,9 @@
   </div>
 
   <div class="results-section">
-    <app-cask-details  *ngIf="caskConfig && caskConfig.details" [caskConfig]="caskConfig" (onDeleteCask)="promptDeleteCask()" (onClearCask)="promptClearCask()"></app-cask-details>
+    <app-cask-details  *ngIf="caskConfig && caskConfig.details"
+                       [caskConfig]="caskConfig"
+                       (deleteCask)="promptDeleteCask()"></app-cask-details>
   </div>
 
 </div>
