exporting via csv and json now working again

--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
@@ -20,6 +20,7 @@
 
     <app-tabbed-results-view *ngIf="resultType"
                              [instances$]="results$"
+                             [profileData$]="queryProfileData$"
                              [type]="resultType"
                              (instanceSelected)="instanceSelected.emit($event)"
                              (downloadClicked)="downloadQueryHistory($event.format)"
