--- a/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
@@ -18,6 +18,7 @@
     <app-query-list [historyRecords]="history" (recordSelected)="setActiveRecord($event)"></app-query-list>
     <div class="results-section" *ngIf="activeRecordResults$">
       <app-tabbed-results-view
+        [profileData$]="activeQueryProfileData$"
         [instances$]="activeRecordResults$"
         [type]="activeRecordResultType"
         (downloadClicked)="downloadQueryHistory($event)"
