--- a/vyne-query-service/src/main/web/src/app/query-panel/taxi-viewer/call-explorer/call-explorer.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/taxi-viewer/call-explorer/call-explorer.component.html
@@ -4,22 +4,22 @@
       <div class="table-header">Calls</div>
       <div class="table-subheader">(Click to explore)</div>
     </div>
-    <div class="operation" *ngFor="let operation of queryResult?.remoteCalls" (click)="selectOperation(operation)">
+    <div class="operation" *ngFor="let operation of remoteCalls$ | async" (click)="selectOperation(operation)">
       <div class="verb">{{ operation.method }}</div>
-      <div class="address" [matTooltip]="getPathOnly(operation.addresss)">{{ getPathOnly(operation.addresss) }}</div>
+      <div class="address" [matTooltip]="getPathOnly(operation.address)">{{ getPathOnly(operation.address) }}</div>
     </div>
   </div>
   <div class="chart-container" *ngIf="!selectedOperation">
     <mat-button-toggle-group [(value)]="selectedChart">
-      <mat-button-toggle value="graph">
-        <mat-icon>timeline</mat-icon>
-      </mat-button-toggle>
+<!--      <mat-button-toggle value="graph">-->
+<!--        <mat-icon>timeline</mat-icon>-->
+<!--      </mat-button-toggle>-->
       <mat-button-toggle value="sequence">
         <mat-icon>compare_arrows</mat-icon>
       </mat-button-toggle>
     </mat-button-toggle-group>
-    <app-service-graph [result]="queryResult" *ngIf="selectedChart == 'graph'"></app-service-graph>
-    <app-sequence-diagram [result]="queryResult" *ngIf="selectedChart == 'sequence'"></app-sequence-diagram>
+<!--    <app-service-graph [result]="queryResult" *ngIf="selectedChart == 'graph'"></app-service-graph>-->
+    <app-sequence-diagram [profileData$]="queryProfileData$" *ngIf="selectedChart == 'sequence'"></app-sequence-diagram>
   </div>
   <app-call-explorer-operation-view [operation]="selectedOperation" *ngIf="selectedOperation" (close)="selectedOperation = null"></app-call-explorer-operation-view>
 </div>
