--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
@@ -9,6 +9,8 @@
         (executeQuery)="submitQuery()"
         [currentState]="currentState"
         [error]="lastErrorMessage"
+        [runningQueryStatus]="queryMetadata$ | async"
+        (cancelQuery)="cancelQuery()"
       >
       </app-query-editor-bottom-bar>
 
