fix display errors when showing results in grid, support displaying results with nested anonymous types

--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
@@ -28,6 +28,7 @@
                              [instances$]="results$"
                              [profileData$]="queryProfileData$"
                              [type]="resultType"
+                             [anonymousTypes]="anonymousTypes"
                              (instanceSelected)="instanceSelected.emit($event)"
                              (downloadClicked)="downloadQueryHistory($event.format)"
     ></app-tabbed-results-view>
