Lens-554, unpublish relevant types when a cask is deleted.

--- a/vyne-query-service/src/main/web/src/app/cask-viewer/cask-details.component.html
+++ b/vyne-query-service/src/main/web/src/app/cask-viewer/cask-details.component.html
@@ -2,7 +2,10 @@
   <h4>Details for {{caskConfig.tableName}}</h4>
 
   <span  class="results-actions">
-    <button (click)="deleteCask.emit(caskConfig)" mat-icon-button matTooltip="Delete this cask">
+    <button
+      (click)="deleteCask.emit(caskConfig)"
+      [disabled]="caskConfig.exposesType === true"
+      mat-icon-button [matTooltip]="caskConfig.exposesType === false ? 'Delete this cask' : 'A View based Cask can not be deleted!'">
       <i class="material-icons">delete</i>
     </button>
   </span>
